Switched to use the new methods norm.